Fix editor overflow

--- a/client/components/dialog/style.scss
+++ b/client/components/dialog/style.scss
@@ -135,7 +135,3 @@
 .dialog__action-buttons .is-left-aligned {
 	float: left;
 }
-
-.ReactModal__Body--open {
-	overflow: hidden;
-}
